--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
                         <p class="para">hello students</p>
                         <h2>welcome to the Department of Information Technology </h2>
-                        <p class="second"> This is an educational website is mostly based on HTML5 and  CSS3 template created by Mohammed Nour Djibrine for the Department of Information Technology. This is a Bootstrap v5.1.3 layout. The picture background is taken from various places. </p>
+                        <p class="second"> This educational website is mostly based on HTML5 and  CSS3 template created by Mohammed Nour Djibrine for the Department of Information Technology.The picture background is taken from various places. </p>
                         <a href="#" class="btn">join us now</a>
                     </div>
                 </div>
