--- a/index.html
+++ b/index.html
@@ -22,7 +22,14 @@
                 <i class="fab fa-instagram"></i>
             </div>
         </div>
-       
+       <section class="search-bar">
+        <div class="search-container" id="searchContainer">
+            <input type="text" id="searchInput" class="" placeholder="Search anything...">
+            <button id="searchButton">
+                <i class="fas fa-search"></i>
+            </button>
+        </div>
+    </section>   
     </header>
     <section class="upper">
         <video src="/assets/course-video.mp4" loop autoplay muted></video>
